@@ -76,7 +76,7 @@
 & Suppress several harmless compiler warning and advice messages.
 & Use -list -show_include all -show_macros both_ways when debugging.
 &
-&set_string cflags -D_SVID_SOURCE -D_POSIX_C_SOURCE=199506L -DPERL_CORE -O4
+&set_string cflags -D_SVID_SOURCE -D_POSIX_C_SOURCE=199506L -DPERL_CORE -O4 -DPERL_NO_DEV_RANDOM
 &
 &if &compiler& = cc
 &then &set_string cflags &cflags& '-u'
@@ -120,7 +120,7 @@
 &
 & Some of the compiler invocations need more VM than
 & the defaults allow. Raise the limits.
-!update_process_cmd_limits -initial_total_limit 100000000 -no_ask
+!update_process_cmd_limits -initial_total_limit 150000000 -initial_heap_limit 100000000 -no_ask
 &
 !&compiler& <<av.c &diag& &cpu& &cflags& -o av&s&
 &if (command_status) ^= 0 &then &return
@@ -159,6 +159,8 @@
 & !unlink opmini.c
 & &if (command_status) ^= 0 &then &return
 &
+!&compiler& <<pad.c &diag& &cpu& &cflags& -o pad&s&
+&if (command_status) ^= 0 &then &return
 !&compiler& <<perl.c &diag& &cpu& &cflags& -o perl&s& &+
      -DARCHLIB="/system/ported/lib/perl5/5.8.3/&obj2&" &+
      -DARCHLIB_EXP="/system/ported/lib/perl5/5.8.3/&obj2&" &+
@@ -224,7 +226,7 @@
 &then &do
  &if (exists -file perl.a) &then !delete_file perl.a
  !ar rc perl.a av.o deb.o doio.o doop.o dump.o globals.o gv.o hv.o locale.o &+
- mg.o numeric.o op.o perl.o perlapi.o perlio.o perly.o pp.o pp_ctl.o &+
+ mg.o numeric.o op.o pad.o perl.o perlapi.o perlio.o perly.o pp.o pp_ctl.o &+
  pp_hot.o pp_pack.o pp_sort.o pp_sys.o reentr.o regcomp.o regexec.o run.o &+
  scope.o sv.o taint.o toke.o universal.o utf8.o util.o vos.o xsutils.o
  !delete_file *.o -no_ask -brief
