@@ -11,7 +11,7 @@ $binexp='/system/gnu_library/bin'
 $byteorder='4321'
 $castflags='0'
 $cf_by='Paul.Green@stratus.com'
-$cf_time='2002-02-15 20:16 UCT'
+$cf_time='2004-01-13 12:00 UCT'
 $cpp_stuff='42'
 $cpplast='-'
 $cppminus='-'
@@ -28,7 +28,7 @@ $d_SCNfldbl='define'
 $d__fwalk='undef'
 $d_access='define'
 $d_accessx='undef'
-$d_aintl='define'
+$d_aintl='undef'
 $d_alarm='define'
 $d_archlib='undef'
 $d_asctime_r='undef'
@@ -164,7 +164,7 @@ $d_getservent_r='undef'
 $d_getservprotos='define'
 $d_getspnam='undef'
 $d_getspnam_r='undef'
-$d_gettimeod='undef'
+$d_gettimeod='define'
 $d_gmtime_r='undef'
 $d_gnulibc='undef'
 $d_grpasswd='undef'
@@ -391,7 +391,7 @@ $db_version_patch='undef'
 $defvoidused='15'
 $direntrytype='struct dirent'
 $doublesize='8'
-$drand01='rand()/(RAND_MAX+1)'
+$drand01='(rand() / (double) ((unsigned long)1 << 15))'
 $drand48_r_proto='0'
 $eagain='EAGAIN'
 $ebcdic='undef'
@@ -515,6 +515,8 @@ $i_values='define'
 $i_varargs='undef'
 $i_vfork='undef'
 $inc_version_list_init='0'
+$installprefix='/system/ported/perl5'
+$installprefixexp='/system/ported/perl5'
 $installusrbinperl='undef'
 $intsize='4'
 $ivdformat='"d"'
