@@ -15,6 +15,7 @@ modules:  miniperlmain,
           mg,
           numeric,
           op,
+          pad,
           perl,
           perlapi,
           perlio,
